<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name" translatable="false">NotePad</string>
    <string name="live_folder_name" translatable="false">Notes</string>

    <string name="title_edit_title" translatable="false">Note title:</string>
    <string name="title_create" translatable="false">New note</string>
    <string name="title_edit" translatable="false">Edit: %1$s</string>
    <string name="title_notes_list" translatable="false">Notes</string>

    <string name="menu_add" translatable="false">New note</string>
    <string name="menu_save" translatable="false">Save</string>
    <string name="menu_delete" translatable="false">Delete</string>
    <string name="menu_open" translatable="false">Open</string>
    <string name="menu_revert" translatable="false">Revert changes</string>
    <string name="menu_copy" translatable="false">Copy</string>
    <string name="menu_paste" translatable="false">Paste</string>
    <string name="menu_settings" translatable="false">Preferences</string>
    <string name="menu_share" translatable="false">Share</string>
    <string name="menu_category" translatable="false">分类</string>
    <string name="menu_pin" translatable="false">置顶</string>
    <string name="menu_export" translatable="false">导出</string>
    <string name="category_hint" translatable="false">输入分类名称（留空表示无分类）</string>
    <string name="category_set" translatable="false">分类已设置</string>
    <string name="category_removed" translatable="false">分类已移除</string>
    <string name="pinned_on" translatable="false">已置顶</string>
    <string name="pinned_off" translatable="false">已取消置顶</string>
    <string name="export_success" translatable="false">已导出到</string>
    <string name="export_failed" translatable="false">导出失败</string>
    <string name="export_title" translatable="false">标题</string>
    <string name="export_created" translatable="false">创建时间</string>
    <string name="export_modified" translatable="false">修改时间</string>
    <string name="export_content" translatable="false">内容</string>

    <string name="button_ok" translatable="false">OK</string>
    <string name="text_title" translatable="false">Title:</string>

    <string name="resolve_edit" translatable="false">Edit note</string>
    <string name="resolve_title" translatable="false">Edit title</string>

    <string name="error_title" translatable="false">Error</string>
    <string name="error_message" translatable="false">Error loading note</string>
    <string name="nothing_to_save" translatable="false">There is nothing to save</string>
    <string name="hint_search_notes" translatable="false">Search notes</string>
    <string name="empty_notes" translatable="false">No notes yet.\nTap the + button to create one.</string>
    <string name="pref_dark_theme" translatable="false">Dark theme</string>
    <string name="pref_dark_theme_summary" translatable="false">Apply a comfortable dark palette across the app</string>
    <string name="pref_text_size" translatable="false">Editor text size</string>
    <string name="pref_text_size_summary" translatable="false">Choose how large note text appears in the editor</string>
    <string name="share_note_chooser" translatable="false">Export note using</string>
    <string name="search_filter_by_category" translatable="false">按分类筛选:</string>
    <string name="all_categories" translatable="false">全部分类</string>
    <string name="search_results_count" translatable="false">找到 %d 条笔记</string>
    <string name="search_advanced" translatable="false">高级搜索</string>
    <string name="search_clear" translatable="false">清除搜索</string>

    <string-array name="pref_text_size_entries">
        <item>Small</item>
        <item>Normal</item>
        <item>Large</item>
    </string-array>
    <string-array name="pref_text_size_entry_values">
        <item>small</item>
        <item>normal</item>
        <item>large</item>
    </string-array>
</resources>
