<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_save"
          android:icon="@drawable/ic_menu_save"
          android:alphabeticShortcut='s'
          android:title="@string/menu_save"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_revert"
          android:icon="@drawable/ic_menu_revert"
          android:title="@string/menu_revert" />
    <item android:id="@+id/menu_delete"
          android:icon="@drawable/ic_menu_delete"
          android:title="@string/menu_delete"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_share"
          android:icon="@android:drawable/ic_menu_share"
          android:title="@string/menu_share"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_category"
          android:icon="@android:drawable/ic_menu_sort_by_size"
          android:title="@string/menu_category"
          android:showAsAction="never" />
    <item android:id="@+id/menu_pin"
          android:icon="@android:drawable/ic_menu_view"
          android:title="@string/menu_pin"
          android:showAsAction="never" />
    <item android:id="@+id/menu_export"
          android:icon="@android:drawable/ic_menu_save"
          android:title="@string/menu_export"
          android:showAsAction="never" />
</menu>